--- a/Week1.html
+++ b/Week1.html
@@ -52,7 +52,7 @@
          permission.</p>
     
 
-     
+         <center><p> <a href="Week2.html" title="Week 2 HW Webpage"> WEEK 2 </a>.</p> </center>
   </body>
   <main>
   </main>
