--- a/Week1.html
+++ b/Week1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>My Github Page</title>
   </head>
   <body>
       <center> <h2> <em> As We May Think </em></h2> </center>
