--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>My Github Page</title>
   </head>
   <body>
       <center> <h2>Dominique McCormack - Web Development</h2> </center>
