--- a/Week2.html
+++ b/Week2.html
@@ -5,7 +5,7 @@
     <title>My Github Page</title>
   </head>
   <body>
-      <center> <h2> <em> John Berger/Ways of Seeing </em></h2> </center>
+      <center> <h2> John Berger/Ways of Seeing </h2> </center>
       <p style="font-size: 15px"> School children interpreting Caravaggio was my favorite part of the program.  
         The attitude Berger has towards art "experts" is fascinating. If an expert had been present with the 
         children instead of Berger, he might have been uncomfortable as the kids got it all "wrong" in his opinion.
