--- a/Week2.html
+++ b/Week2.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Github Page</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
       <center> <h2> John Berger/Ways of Seeing </h2> </center>
