--- a/Week2.html
+++ b/Week2.html
@@ -20,6 +20,16 @@
       <br>
       <br>
       <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <p style="font-size: 15px"> School children interpreting Caravaggio was my favorite part of the program.  
         The attitude Berger has towards art "experts" is fascinating. If an expert had been present with the 
         children instead of Berger, he might have been uncomfortable as the kids got it all "wrong" in his opinion.
@@ -36,6 +46,7 @@
         successfully twisted them, stating that paintings aren't reduced to literature and film, and tell us how 
         this distinct possibility enables painting to convey ideologies or become the field of politics.  </p>
      
+        <img src="IMG_6206.jpg" style ="width: 400 px;height:500px"
   </body>
   <main>
   </main>
