--- a/Week2.html
+++ b/Week2.html
@@ -7,7 +7,7 @@
   </head>
   <body>
       <center> <h2> John Berger/Ways of Seeing </h2> </center>
-      <img src="IMG_6206.jpg"
+      <center> <img src="IMG_6206.jpg"></center>
 
       <br>
       <br>
