--- a/Week2.html
+++ b/Week2.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div class="content_wrapper">
-      <center> <img src="IMG_6206.jpg"></center>
+      <center> <img src="IMG_6206.jpg"
+                width="1024" 
+                height="800"></center>
       <div class="text_wrapper">
       <center> <h2> John Berger/Ways of Seeing </h2> </center>
   
