--- a/Week2.html
+++ b/Week2.html
@@ -9,7 +9,7 @@
     <div class="content_wrapper">
       <center> <img src="IMG_6206.jpg"></center>
       <div class="text_wrapper">
-      <center> <h2> John Berger/Ways of Seeing </h2> </center>
+      <center> <h2 class="h2_wrapper"> John Berger/Ways of Seeing </h2> </center>
   
       <p style="font-size: 15px"> School children interpreting Caravaggio was my favorite part of the program.  
         The attitude Berger has towards art "experts" is fascinating. If an expert had been present with the 
