--- a/Week2.html
+++ b/Week2.html
@@ -11,7 +11,7 @@
       <div class="text_wrapper">
       <center> <h2 class="h2_wrapper"> John Berger/Ways of Seeing </h2> </center>
   
-      <p style="font-size: 15px"> School children interpreting Caravaggio was my favorite part of the program.  
+      <p class="p_wrapper" style="font-size: 15px"> School children interpreting Caravaggio was my favorite part of the program.  
         The attitude Berger has towards art "experts" is fascinating. If an expert had been present with the 
         children instead of Berger, he might have been uncomfortable as the kids got it all "wrong" in his opinion.
         People may feel more free to think if educated people encourage it.  While you will always find accuracy 
@@ -21,7 +21,7 @@
         Culturally and philosophically, these comparisons and contrasts are interesting to see. It is crucial to 
         understand art to understand its meaning and context.  </p>
 
-      <p style="font-size: 15px"> John Berger has a great combination of in-depth arts knowledge and Marxist 
+      <p class="p1_wrapper" style="font-size: 15px"> John Berger has a great combination of in-depth arts knowledge and Marxist 
         thinking. Marxist cultural theories simplify the complex nature of art forms, which is a common weakness. 
         Berger criticized the words of conventional art experts, but in putting them into his own argument he 
         successfully twisted them, stating that paintings aren't reduced to literature and film, and tell us how 
