--- a/Week2.html
+++ b/Week2.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <div class="content_wrapper">
-      <center> <img src="IMG_6206.jpg"></center>
+      <img src="IMG_6206.jpg">
       <div class="text_wrapper">
-      <center> <h2 class="h2_wrapper"> John Berger/Ways of Seeing </h2> </center>
+      <h2 class="h2_wrapper"> John Berger/Ways of Seeing </h2> 
   
       <p class="p_wrapper" style="font-size: 25px"> School children interpreting Caravaggio was my favorite part of the program.  
         The attitude Berger has towards art "experts" is fascinating. If an expert had been present with the 
