--- a/Week2.html
+++ b/Week2.html
@@ -8,7 +8,7 @@
   <body>
     <div class="content_wrapper">
       <img src="IMG_6206.jpg">
-      <h2 class="h2_wrapper"> John Berger/Ways of Seeing </h2> 
+      <div class="heading_wrapper"> <h2 class="h2_wrapper"> John Berger/Ways of Seeing </h2> </div> 
       <div class="text_wrapper">
   
       <p class="p_wrapper" style="font-size: 25px"> School children interpreting Caravaggio was my favorite part of the program.  
