--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta name = "viewport" content="with=device-width, initial-scale=1.0">
     <title>My Github Page</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
       <center> <h2>Dominique McCormack - Web Development</h2> </center>
