--- a/Week4.html
+++ b/Week4.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styleWeek4.css">
   </head>
   <body>
-      <h1> Who is Rosalyn? </h1>
+      <h1> Rosalyn . . .  </h1>
 <div class="flex">
 <div class="container">
     <div class="img img1"></div>
