--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
           </header>
         <video autoplay muted loop>
-          <source src="welcome.mp4"  type="video/mp4">
-          <source src="welcome.webm" type="video/webm">
-          <source src="welcome.ogv"  type="video/ogg">
+          <source src="Home Page/welcome.mp4"  type="video/mp4">
+          <source src="Home Page/welcome.webm" type="video/webm">
+          <source src="Home Page/welcome.ogv"  type="video/ogg">
         </video>
       </div>
     </div>
