--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
           </ul>
     </header>
   </div>
+
+  <center><p> <a href="/Project presentation/index.html" title="Presentation"> WEEK 4 </a>.</p> </center>
   </body>
   <main>
   </main>
