--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <li><a href="#" class="active"> WEEK 1 </a></li>
                 <li><a href="#"> John Berger </a></li>
                 <li><a href="#"> Portrait </a></li>
+                <li><a href="/Project presentation/index.html" title="Presentation"> WEEK 4 </a></li>
           </ul>
     </header>
   </div>
 
-  <center><p> <a href="/Project presentation/index.html" title="Presentation"> WEEK 4 </a>.</p> </center>
   </body>
   <main>
   </main>
