--- a/Weeks/Week2.html
+++ b/Weeks/Week2.html
@@ -3,11 +3,66 @@
   <head>
     <meta charset="utf-8">
     <title>My Github Page</title>
-    <link rel="stylesheet" href="styles.css">
   </head>
+  <style>
+    body {
+      margin: 500;
+      background-color: aquamarine;
+      overflow-x: hidden;
+    }
+	
+
+    .content_wrapper {
+      width: 80%;
+      margin: 4%, 10%, 5%, 10%;
+      align-items: center;
+    } 
+
+    .content_wrapper img {
+        width: 100%;
+    } 
+
+    .heading_wrapper .h2_wrapper {
+        width: 70%;
+        position: absolute;
+        top: 40px;
+        right: 16px;
+    }
+
+    .text_wrapper {
+        width: 80%;
+        position: relative;
+        margin-top: -40%;
+    }
+
+    .p_wrapper {
+        font-family: "Chalkduster", fantasy; 
+        background-color: #cfc;
+        padding: 20px;
+        border: 5px solid blue;
+    }
+
+    .p1_wrapper {
+        font-family: "Chalkduster", fantasy; 
+        background-color: #cfc;
+        padding: 20px;
+        border: 5px solid blue;
+    }
+
+    .h2_wrapper {
+        font-family: "Chalkduster", fantasy;   
+        font-size: 62px;
+        font-style: italic;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.8);
+        display: inline-block;
+        text-align: center;
+    }
+
+  </style>
   <body>
     <div class="content_wrapper">
-      <img src="IMG_6206.jpg">
+      <img src="../Images/IMG_6206.jpg">
       <div class="heading_wrapper"> <h2 class="h2_wrapper"> John Berger/Ways of Seeing </h2> </div> 
       <div class="text_wrapper">
   
@@ -29,7 +84,6 @@
       </div>
       </div>
      
-      <center><p> <a href="Week4.html" title="Week 4 HW Webpage"> WEEK 4 </a>.</p> </center>
   </body>
   <main>
   </main>
