--- a/Weeks/Week4.html
+++ b/Weeks/Week4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Github Page</title>
-    <link rel="stylesheet" href="styleWeek4.css">
+    <link rel="stylesheet" href="../CSS Files/styleWeek4.css">
   </head>
   <body>
       <h1> Rosalyn . . .  </h1>
@@ -19,7 +19,6 @@
                    </div>
         </div>
 
-        <center><p> <a href="/Project presentation/index.html" title="Presentation"> WEEK 4 </a>.</p> </center>
 
       
 </body>
