--- a/index.html
+++ b/index.html
@@ -4,34 +4,46 @@
     <meta name = "viewport" content="with=device-width, initial-scale=1.0">
     <title>Game Design, Art and More</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/5567ee3541.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <div class="banner">
+      <video autoplay loop muted>
+          <source src="Home Page/animated.mp4"  type="video/mp4">
+          <source src="Home Page/animated.webm" type="video/webm">
+          <source src="Home Page/animated.ogv"  type="video/ogg">
+      </video>
+       <h2> GAMES, ART & MORE </h2>
+      </div>
     <div class="container">
       <div class="gradient">
         <div class="wrapper">
           <header>
             <div class="logo">
-              <i class="fas fa-gamepad"></i>
+              <i class="fa-solid fa-gamepad fa-3x fa-bounce"></i>
               <p>Designing Games</p>
             </div>
           </header>
         <video autoplay muted loop>
-          <source src="/Home Page/welcome.mp4"  type="video/mp4">
-          <source src="/Home Page/welcome.webm" type="video/webm">
-          <source src="/Home Page/welcome.ogv"  type="video/ogg">
+          <source src="Home Page/welcome.mp4"  type="video/mp4">
+          <source src="Home Page/welcome.webm" type="video/webm">
+          <source src="Home Page/welcome.ogv"  type="video/ogg">
         </video>
+        </div>
       </div>
-    </div>
-    <header>
-          <ul class="navbar">
-                <li><a href="#" class="active"> WEEK 1 </a></li>
-                <li><a href="#"> John Berger </a></li>
-                <li><a href="#"> Portrait </a></li>
-                <li><a href="/Project presentation/index.html" title="Presentation"> WEEK 4 </a></li>
-          </ul>
-    </header>
-  </div>
+      <header class="navi">
+        <ul class="navbar">
+              <li><a href="Weeks/Week1.html"> WEEK 1 </a></li>
+              <li><a href="Weeks/Week2.html"> John Berger </a></li>
+              <li><a href="Weeks/Week4.html"> Portrait </a></li>
+              <li><a href="Project presentation/index.html" title="Presentation"> WEEK 4 </a></li>
+        </ul>
+     </header>
+     <div class ="icon-banner">
+      <i class="fa-solid fa-gamepad fa-4x"></i>
+     </div>
 
+    </div>
   </body>
   <main>
   </main>
