--- a/Project presentation/page2.html
+++ b/Project presentation/page2.html
@@ -13,7 +13,16 @@
   </audio>
   
   <script>
-    document.addEventListener('click', function() { document.getElementById('my_audio').play() }, { once: true })
+    document.addEventListener(
+        "click",
+        function () {
+          var iFrameDetection = window === window.parent ? false : true;
+          if (!iFrameDetection) {
+            document.getElementById("my_audio").play();
+          }
+        },
+        { once: true }
+      );
   </script>
     <h1>Artists</h1>
     <div class="container1">
