--- a/Project presentation/page3.html
+++ b/Project presentation/page3.html
@@ -13,10 +13,18 @@
   </audio>
   
   <script>
-    document.addEventListener('click', function() { document.getElementById('my_audio').play() }, { once: true })
+    document.addEventListener(
+        "click",
+        function () {
+          var iFrameDetection = window === window.parent ? false : true;
+          if (!iFrameDetection) {
+            document.getElementById("my_audio").play();
+          }
+        },
+        { once: true }
+      );
   </script>
     <div class="container4">
-      <img src="BigDipper.jpeg" width="100%" />
       <div class="text-block1">
         <h1>The Big Dipper</h1>
         <p>
