--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul class="navbar">
               <li><a href="Weeks/Week1.html"> WEEK 1 </a></li>
               <li><a href="Weeks/Week2.html"> John Berger </a></li>
-              <li><a href="Weeks/Week4.html"> Portrait </a></li>
+              <li><a href="Weeks/"> Portrait </a></li>
               <li><a href="Project presentation/index.html" title="Presentation"> WEEK 4 </a></li>
         </ul>
      </header>
