Fixed404Error_Week4

--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
     <script src="https://kit.fontawesome.com/5567ee3541.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="banner">
-      <video autoplay loop muted>
-          <source src="Home Page/animated.mp4"  type="video/mp4">
-          <source src="Home Page/animated.webm" type="video/webm">
-          <source src="Home Page/animated.ogv"  type="video/ogg">
-      </video>
-       <h2> GAMES, ART & MORE </h2>
-      </div>
     <div class="container">
       <div class="gradient">
         <div class="wrapper">
@@ -35,15 +27,23 @@
         <ul class="navbar">
               <li><a href="Weeks/Week1.html"> WEEK 1 </a></li>
               <li><a href="Weeks/Week2.html"> John Berger </a></li>
-              <li><a href="Weeks/"> Portrait </a></li>
+              <li><a href="Weeks/Week4.html"> Portrait </a></li>
               <li><a href="Project presentation/index.html" title="Presentation"> WEEK 4 </a></li>
         </ul>
      </header>
-     <div class ="icon-banner">
-      <i class="fa-solid fa-gamepad fa-4x"></i>
-     </div>
 
     </div>
+
+    <div class ="icon-banner">
+      <i class="fa-solid fa-gamepad fa-4x"></i>
+      <h1> GAMES, ART & MORE </h1>
+      <video autoplay loop muted>
+        <source src="Home Page/animated.mp4"  type="video/mp4">
+        <source src="Home Page/animated.webm" type="video/webm">
+        <source src="Home Page/animated.ogv"  type="video/ogg">
+    </video>
+     </div>
+
   </body>
   <main>
   </main>
