--- a/Weeks/Week1.html
+++ b/Weeks/Week1.html
@@ -52,7 +52,8 @@
          permission.</p>
     
 
-         <center><p> <a href="Week2.html" title="Week 2 HW Webpage"> WEEK 2 </a>.</p> </center>
+         <center><p> <a href="Week2.html" title="John Berger Poster"> WEEK 2 </a>.</p> </center>
+         <center><p> <a href="../Book Presentation/ComicStrip.html" title="Sonic Comic Strip"> WEEK 8 </a>.</p> </center>
   </body>
   <main>
   </main>
