--- a/index.html
+++ b/index.html
@@ -34,15 +34,41 @@
 
     </div>
 
-    <div class ="icon-banner">
+    <div class="icon-banner">
       <i class="fa-solid fa-gamepad fa-4x"></i>
-      <h1> GAMES, ART & MORE </h1>
-      <video autoplay loop muted>
-        <source src="Home Page/animated.mp4"  type="video/mp4">
-        <source src="Home Page/animated.webm" type="video/webm">
-        <source src="Home Page/animated.ogv"  type="video/ogg">
-    </video>
-     </div>
+      <h1>
+        <span class="blend-text">GAMES, ART & MORE </span>
+
+        <video autoplay loop muted>
+          <source src="Home Page/animated1.mp4" type="video/mp4" />
+          <source src="Home Page/animated1.webm" type="video/webm" />
+          <source src="Home Page/animated1.ogv" type="video/ogg" />
+        </video>
+        <video autoplay loop muted>
+          <source src="Home Page/animated1.mp4" type="video/mp4" />
+          <source src="Home Page/animated1.webm" type="video/webm" />
+          <source src="Home Page/animated1.ogv" type="video/ogg" />
+        </video>
+        <video autoplay loop muted>
+          <source src="Home Page/animated1.mp4" type="video/mp4" />
+          <source src="Home Page/animated1.webm" type="video/webm" />
+          <source src="Home Page/animated1.ogv" type="video/ogg" />
+        </video>
+
+        <video autoplay loop muted>
+          <source src="Home Page/animated1.mp4" type="video/mp4" />
+          <source src="Home Page/animated1.webm" type="video/webm" />
+          <source src="Home Page/animated1.ogv" type="video/ogg" />
+        </video>
+
+        <video autoplay loop muted>
+          <source src="Home Page/animated1.mp4" type="video/mp4" />
+          <source src="Home Page/animated1.webm" type="video/webm" />
+          <source src="Home Page/animated1.ogv" type="video/ogg" />
+        </video>
+
+      </h1>
+    </div>
 
   </body>
   <main>
