--- a/Book Presentation/ComicStrip.html
+++ b/Book Presentation/ComicStrip.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sonic Comic</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Comicstyle.css" />
   </head>
   <body>
     <div class="wrapper">
