--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
         <span class="blend-text">GAMES, ART & MORE </span>
 
         <video autoplay loop muted>
-          <source src="Home Page/animated1.mp4" type="video/mp4" />
-          <source src="Home Page/animated1.webm" type="video/webm" />
-          <source src="Home Page/animated1.ogv" type="video/ogg" />
+          <source src="Home Page/animated.mp4" type="video/mp4" />
+          <source src="Home Page/animated.webm" type="video/webm" />
+          <source src="Home Page/animated.ogv" type="video/ogg" />
         </video>
         <video autoplay loop muted>
-          <source src="Home Page/animated1.mp4" type="video/mp4" />
-          <source src="Home Page/animated1.webm" type="video/webm" />
-          <source src="Home Page/animated1.ogv" type="video/ogg" />
+          <source src="Home Page/animated.mp4" type="video/mp4" />
+          <source src="Home Page/animated.webm" type="video/webm" />
+          <source src="Home Page/animated.ogv" type="video/ogg" />
         </video>
         <video autoplay loop muted>
-          <source src="Home Page/animated1.mp4" type="video/mp4" />
-          <source src="Home Page/animated1.webm" type="video/webm" />
-          <source src="Home Page/animated1.ogv" type="video/ogg" />
-        </video>
-
-        <video autoplay loop muted>
-          <source src="Home Page/animated1.mp4" type="video/mp4" />
-          <source src="Home Page/animated1.webm" type="video/webm" />
-          <source src="Home Page/animated1.ogv" type="video/ogg" />
+          <source src="Home Page/animated.mp4" type="video/mp4" />
+          <source src="Home Page/animated.webm" type="video/webm" />
+          <source src="Home Page/animated.ogv" type="video/ogg" />
         </video>
 
         <video autoplay loop muted>
-          <source src="Home Page/animated1.mp4" type="video/mp4" />
-          <source src="Home Page/animated1.webm" type="video/webm" />
-          <source src="Home Page/animated1.ogv" type="video/ogg" />
+          <source src="Home Page/animated.mp4" type="video/mp4" />
+          <source src="Home Page/animated.webm" type="video/webm" />
+          <source src="Home Page/animated.ogv" type="video/ogg" />
+        </video>
+
+        <video autoplay loop muted>
+          <source src="Home Page/animated.mp4" type="video/mp4" />
+          <source src="Home Page/animated.webm" type="video/webm" />
+          <source src="Home Page/animated.ogv" type="video/ogg" />
         </video>
 
       </h1>
