--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
       </h1>
     </div>
 
+    <!--logo and header section ends here-->
+    <section class="section-1">
+      <div class="section-1-wrapper">
+        <h1> ITCH.IO GAME PORTFOLIO </h1>
+        <br>
+
+        <div class="section-1-img">
+          <a href="#"><div class="img img-1"></div></a>
+          <a href="#"><div class="img img-2"></div></a>
+          <a href="#"><div class="img img-3"></div></a>
+          <a href="#"><div class="img img-4"></div></a>
+        </div>
+      </div>
+    </section>
+
   </body>
   <main>
   </main>
