--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
     <!--logo and header section ends here-->
     <section class="section_parallax1 bg_blue">
       <div class="section_parallax1-content">
-        <img src="./images/stars.png" alt="image" id="stars" />
-        <img src="./images/moon.png" alt="image" id="moon" />
+        <img src="./Images/stars.png" alt="image" id="stars" />
+        <img src="./Images/moon.png" alt="image" id="moon" />
         <img
-          src="./images/mountains_behind.png"
+          src="./Images/mountains_behind.png"
           alt="image"
           id="mountains_behind"
         />
         <h1 id="text">Welcome</h1>
         <img
-          src="./images/mountains_front.png"
+          src="./Images/mountains_front.png"
           alt="image"
           id="mountains_front"
         />
