--- a/Weeks/Week1.html
+++ b/Weeks/Week1.html
@@ -54,7 +54,8 @@
 
          <center><p> <a href="Week2.html" title="John Berger Poster"> WEEK 2 </a>.</p> </center>
          <center><p> <a href="../Book Presentation/ComicStrip.html" title="Sonic Comic Strip"> WEEK 8 </a>.</p> </center>
-         <center><p> <a href="Week10.html" title="Sonic Comic Strip"> WEEK 10 </a>.</p> </center>
+         <center><p> <a href="Week10.html" title="Medium Message"> WEEK 10 </a>.</p> </center>
+         <center><p> <a href="../Final Project/FinalProject.html" title="Project Final"> Final </a>.</p> </center>
   </body>
   </body>
   <main>
