--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -87,6 +87,18 @@
           <img src="./Comicimages/Sonic Comic Pg4/Sonic Part 2.png" alt="image" />
         </div>
       </div>
+
+      <div class="page">
+        <div class="panel">
+          <img src="./Comicimages/Sonic Comic Pg4a/Part 1.png" alt="image" />
+        </div>
+        <div class="panel">
+          <img src="./Comicimages/Sonic Comic Pg4a/Part 2.png" alt="image" />
+        </div>
+        <div class="panel">
+          <img src="./Comicimages/Sonic Comic Pg4a/Part 3.png" alt="image" />
+        </div>
+      </div>
       <div class="page">
         <div class="panel">
           <img src="./Comicimages/Sonic Comic Pg5/Sonic Part 1.png" alt="image" />
@@ -338,8 +350,217 @@
         </div>
       </div>
     </div>
-    <button id="btn-reset">Reset</button>
-
+    <div class="footer-row">
+      <button class="button" id="btn-prev">
+        <div class="outer">
+          <div class="height">
+            <div class="inner">Prev</div>
+          </div>
+        </div>
+      </button>
+      <button class="button" id="btn-reset">
+        <div class="outer">
+          <div class="height">
+            <div class="inner">Reset</div>
+          </div>
+        </div>
+      </button>
+      <button class="button" id="btn-next">
+        <div class="outer">
+          <div class="height">
+            <div class="inner">Next</div>
+          </div>
+        </div>
+      </button>
+    </div>
+    <div class="loader-container">
+      <div class="ring"></div>
+      <div class="sonic">
+        <div class="sonic-body"></div>
+      </div>
+      <div class="tube-container">
+        <div class="support-1"></div>
+        <div class="support-2"></div>
+        <div class="tube"></div>
+      </div>
+      <h4>Loading</h4>
+    </div>
+    <div class="start-screen">
+      <h1>
+        sonic the <br> hedgehog <br />
+        Comic
+      </h1>
+      <button class="button" id="btn-start">
+        <div class="outer">
+          <div class="height">
+            <div class="inner">Start</div>
+          </div>
+        </div>
+      </button>
+    </div>
+    <div class="BgAudios">
+      <audio src="./audio/Sonic 1 Jingle.mp3"></audio>
+      <audio src="./audio/Edge of Existence.mp3"></audio>
+      <audio src="./audio/Sonic Terminal Velocity.mp3"></audio>
+    </div>
+    <div class="EffectAudios">
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 1/Sonic Appears.mp3"
+      ></audio>
+      <audio src="./audio/Comic Sound Effects/Comic Page 1/Whoosh .mp3"></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 2/Comic Panel 3/Super Peel Out.mp3"
+        ></audio>
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 2/Comic Panel 2/Part 2/Short Boost .mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 3/Comic Panel 1/Sonic Colors Boost with Water.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 3/Comic Panel 2/Part 1/Smash.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 3/Comic Panel 2/Part 2/Smash.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 3/Comic Panel 3/Sonic Heading to Robot.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 3/Comic Panel 4/Sonic Land Stomp.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 3/Comic Panel 5/Sonic Spin Dash .mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 4/Sonic Colors Boost.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 4a/Part 1/Tornado Plane.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 5/Comic Panel 1/Sonic Jumps off plane .mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 5/Comic Panel 2/Boost Wind.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 6/Comic Panel 2/Part 1/Enemy Spotted.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 6/Comic Panel 2/Part 2/Sonic Wave Boost.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 6/Comic Panel 3/Part 1/Stealth Speed.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 6/Comic Panel 3/Part 2/Enemy Spotted.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 6/Comic Panel 4/Sonic Wave Boost.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 6/Comic Panel 5/Sonic Landed Stance.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 7/Comic Panel 2/Metal Sonic Entrance .mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 8/Comic Panel 2/Robot Hit.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 8/Comic Panel 3/Robot Hit.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 8/Comic Panel 4/Hit Metal Multiple Times.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 9/Comic Panel 1/Smash.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 9/Comic Panel 2/Part 1/Metal Sonic throws .wav "
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 9/Comic Panel 2/Part 2/Boost Wind.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 9/Comic Panel 3/Part 1/Sonic Dodging .wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 9/Comic Panel 3/Part 2/Sonic Dodging .wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 9/Comic Panel 3/Part 3/Sonic Dodging .wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 9/Comic Panel 5/Part 2/Sonic Jump.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 10/Part 1/Explosions.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 10/Part 2/Explosions.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 10/Part 3/Explosions.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 10/Part 4/Sonic Escape Explosions.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 11/Comic Panel 1/Part 1/Machine Shoot.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 11/Comic Panel 1/Part 2/Super Peel Out.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 11/Comic Panel 2/Part 1/POW.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 11/Comic Panel 2/Part 2/Blue Streak.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 11/Comic Panel 4/Sonic Damaged.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 12/Comic Panel 1/Part 2/Robot Hit.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 12/Comic Panel 5/Sonic Throws Something.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 13/Comic Panel 1/Part 3/Robot Hit.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 13/Comic Panel 2/Part 2/Boost Wind.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 13/Comic Panel 4/Part 2/Tornado Engine.mp3 "
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 13/Comic Panel 4/Part 3/Metal Sonic notices.wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 13/Comic Panel 4/Part 4/Tornado Propeller.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 14/Part 2/They fly away .wav"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Comic Page 15/Team Wins.mp3"
+      ></audio>
+      <audio
+        src="./audio/Comic Sound Effects/Prev, Next, Reset Buttons/ring-collect.mp3"
+        class="btn-audio click"
+      ></audio>
+      <audio
+        src="./audio/mixkit-winning-a-coin-video-game-2069.wav"
+        class="btn-audio hover"
+      ></audio>
+      <audio src="./audio/Edge of Existence.mp3"></audio>
+      <audio src="./audio/Sonic Terminal Velocity.mp3"></audio>
+    </div>
     <script src="./FP_script.js"></script>
   </body>
 </html>
