--- a/index.html
+++ b/index.html
@@ -59,16 +59,30 @@
         </div>
       </div>
       <header class="navi">
-        <ul class="navbar">
-              <li><a href="Weeks/Week1.html"> WEEK 1 </a></li>
-              <li><a href="Weeks/Week2.html"> John Berger </a></li>
-              <li><a href="Weeks/Week4.html"> Portrait </a></li>
-              <li><a href="Project presentation/index.html" title="Presentation"> WEEK 4 </a></li>
-        </ul>
+        <nav class="menu">
+          <ol>
+            <li class="menu-item"><a href="#0">About</a></li>
+            <li class="menu-item">
+              <a href="#0">Web Dev Projects</a>
+              <ol class="sub-menu">
+                <li class="menu-item"><a href="./Final Project/FinalProject.html">Animated Sonic Comic</a></li>
+                <li class="menu-item"><a href="./Project presentation/index.html">StarryNight</a></li>
+              </ol>
+            </li>
+            <li class="menu-item"><a href="#0">Contact</a></li>
+          </ol>
+        </nav>
      </header>
 
     </div>
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="icon-banner">
       <i class="fa-solid fa-gamepad fa-4x"></i>
       <h1>
@@ -254,6 +268,34 @@
               </a>
             </div>
           </div>
+          <h1>3D Animation</h1>
+          <div class="owl-carousel owl-theme" id="carousel4">
+            <div>
+              <a
+                href="./Videos/bouncing ball project.mov"
+                class="lightbox-link"
+                data-title="Bouncing Ball"
+              >
+              <video autoplay loop muted>
+                <source src="./Videos/bouncing ball project.mp4" type="video/mp4" />
+                <source src="./Videos/bouncing ball project.webm" type="video/webm" />
+                <source src="./Videos/bouncing ball project.ogg" type="video/ogg" />
+              </video>
+              </a>
+            </div>
+            <div>
+              <a
+                href="./Videos/Rendered Cinematic.mov"
+                class="lightbox-link"
+                data-title="Unreal Engine 4 Cinematic"
+              >
+              <video autoplay loop muted>
+                <source src="./Videos/Rendered Cinematic.mp4" type="video/mp4" />
+                <source src="./Videos/Rendered Cinematic.webm" type="video/webm" />
+                <source src="./Videos/Rendered Cinematic.ogg" type="video/ogg" />
+              </video>
+              </a>
+            </div>
         </div>
       </div>
     </section>
@@ -265,7 +307,7 @@
           <div>
             <div class="shadow">
               <div class="about-img">
-                <img src="Images/pfp.jpg" alt="about image">
+                <img src="Images/pfp.PNG" alt="about image">
               </div>
             </div>
             <h2> Dominique <br> McCormack </h2>
@@ -281,7 +323,7 @@
         </div>
       </div>
       
-      <div class="box">
+      <div class="box-wrapper">
       <div class="about-right">
         <h1> hi<span>!</span> </h1>
         <h2> Here's who I am & what I do </h2>
