--- a/index.html
+++ b/index.html
@@ -278,21 +278,17 @@
               >
               <video autoplay loop muted>
                 <source src="./Videos/bouncing ball project.mp4" type="video/mp4" />
-                <source src="./Videos/bouncing ball project.webm" type="video/webm" />
-                <source src="./Videos/bouncing ball project.ogg" type="video/ogg" />
               </video>
               </a>
             </div>
             <div>
               <a
-                href="./Videos/Rendered Cinematic.mov"
+                href="./Videos/Rendered Cinematic2.mp4"
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic"
               >
-              <video autoplay loop muted>
-                <source src="./Videos/Rendered Cinematic.mp4" type="video/mp4" />
-                <source src="./Videos/Rendered Cinematic.webm" type="video/webm" />
-                <source src="./Videos/Rendered Cinematic.ogg" type="video/ogg" />
+              <video width="100%" autoplay loop muted>
+                <source src="./Videos/Rendered Cinematic2.mp4" type="video/mp4" >
               </video>
               </a>
             </div>
