--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
               >
               <video width="100%" autoplay loop muted>
                 <source src="./Videos/Rendered Cinematic2.mp4" type="video/mp4" >
+                <source src="./Videos/Rendered Cinematic2.webm" type="video/webm" >
+                <source src="./Videos/Rendered Cinematic2.ogg" type="video/ogg" >
               </video>
               </a>
             </div>
