--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic"
               >
-              <video width="100%" autoplay loop muted>
+              <video width="100%" autoplay loop muted controls>
                 <source src="./Videos/Rendered Cinematic2.mp4" type="video/mp4" >
                 <source src="./Videos/Rendered Cinematic2.webm" type="video/webm" >
-                <source src="./Videos/Rendered Cinematic2.ogg" type="video/ogg" >
+                <source src="./Videos/Rendered Cinematic2.ogv" type="video/ogg" >
               </video>
               </a>
             </div>
