--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic"
               >
-              <video width="100%" autoplay loop muted controls>
+              <video width="100%" autoplay loop muted >
                 <source src="./Videos/Rendered Cinematic2.mp4" type="video/mp4" >
                 <source src="./Videos/Rendered Cinematic2.webm" type="video/webm" >
                 <source src="./Videos/Rendered Cinematic2.ogv" type="video/ogg" >
