--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         />
         <h1 id="text">Welcome</h1>
         <img
-          src="./Images/mountains_front.png"
+          src="./Images/mountains_frontNEW.png"
           alt="image"
           id="mountains_front"
         />
@@ -145,6 +145,9 @@
           </a>
           <a href="https://mariasandu.itch.io/platformer"
             ><div class="img img-2"></div>
+          </a>
+          <a href="https://juju136.itch.io/glitch"
+            ><div class="img img-3"></div>
           </a>
         </div>
 
@@ -313,10 +316,10 @@
           </div>
 
           <ul class = "icons">
-            <li><i class = "fab fa-facebook-f"></i></li>
-            <li><i class = "fab fa-twitter"></i></li>
+            <li><i class = "fa fa-envelope"></i></li>
+            <li><i class = "fa brands fa-github"></i></li>
             <li><i class = "fab fa-linkedin"></i></li>
-            <li><i class = "fab fa-instagram"></i></li>
+            <li><i class = "fab fa-itch-io"></i></li>
           </ul>
         </div>
       </div>
