--- a/index.html
+++ b/index.html
@@ -136,9 +136,14 @@
           id="mountains_front"
         />
       </div>
+      
       <div class="section-sub">
-        <h2>itch.io games portfolio</h2>
-        <br />
+        <div class="game-wrapper">
+          <div class="game-anim-title">
+        <h2 id="game">itch.io games portfolio</h2>
+       
+      </div>
+      </div>
         <div class="section-1-img">
           <a href="https://juju136.itch.io/rileys-big-move"
             ><div class="img img-1"></div>
@@ -149,11 +154,18 @@
           <a href="https://juju136.itch.io/glitch"
             ><div class="img img-3"></div>
           </a>
+          <a href="https://the-true-blue.itch.io/a-pirates-lost-treasure"
+            ><div class="img img-4"></div>
+          </a>
         </div>
 
         <!--section one ends here-->
         <div class="char_model">
-          <h1>3D Character Modeling</h1>
+          <div class="modeling-wrapper">
+            <div class=model-anim-title>
+          <h1 id="modeling">3D Character Modeling</h1>
+        </div>
+        </div>
           <div class="owl-carousel owl-theme" id="carousel1">
             <div class="item">
               <a
@@ -179,7 +191,11 @@
               </a>
             </div>
           </div>
-          <h1>3D Interior Space</h1>
+          <div class="interior-wrapper">
+            <div class ="interior-anim-title">
+          <h1 id="interior">3D Interior Space</h1>
+        </div>
+          </div>
           <div class="owl-carousel owl-theme" id="carousel2">
             <div>
               <a
@@ -209,7 +225,11 @@
               </a>
             </div>
           </div>
-          <h1>Digital Art</h1>
+          <div class="art-wrapper">
+            <div class="art-anim-title">
+          <h1 id="art">Digital Art</h1>
+        </div>
+        </div>
           <div class="owl-carousel owl-theme" id="carousel3">
             <div>
               <a
@@ -271,7 +291,11 @@
               </a>
             </div>
           </div>
-          <h1>3D Animation</h1>
+          <div class="animation-wrapper">
+            <div class="animation-anim-title">
+          <h1 id="animation">3D Animation</h1>
+        </div>
+        </div>
           <div class="owl-carousel owl-theme" id="carousel4">
             <div>
               <a
@@ -329,7 +353,7 @@
         <h1> hi<span>!</span> </h1>
         <h2> Here's who I am & what I do </h2>
         <div class="about-btns">
-          <button type="button" class="btn btn-pink">resume</button>
+         <a href="Weeks/resume.html"><button type="button" class="btn btn-pink">resume</button></a> 
           <button type="button" class="btn btn-white">projects</button>
         </div>
         <div class="about-para">
