--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             </div>
           </header>
         <video autoplay muted loop>
-          <source src="Home Page/welcome.mp4"  type="video/mp4">
-          <source src="Home Page/welcome.webm" type="video/webm">
-          <source src="Home Page/welcome.ogv"  type="video/ogg">
+          <source src="./Home Page/welcome.mp4"  type="video/mp4">
+          <source src="./Home Page/welcome.webm" type="video/webm">
+          <source src="./Home Page/welcome.ogv"  type="video/ogg">
         </video>
         </div>
       </div>
