--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <p>Designing Games</p>
             </div>
           </header>
-        <video autoplay muted loop>
+        <video autoplay muted loop controls></video>
           <source src="./Home Page/welcome.mp4"  type="video/mp4"/>
           <source src="./Home Page/welcome.webm" type="video/webm"/>
           <source src="./Home Page/welcome.ogv"  type="video/ogg"/>
