--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
               <p>Designing Games</p>
             </div>
           </header>
-        <video autoplay muted loop controls></video>
+        <video autoplay muted loop controls>
           <source src="./Home Page/welcome.mp4"  type="video/mp4"/>
           <source src="./Home Page/welcome.webm" type="video/webm"/>
           <source src="./Home Page/welcome.ogv"  type="video/ogg"/>
+          This browser does not support HTML5
         </video>
         </div>
       </div>
