--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
               <p>Designing Games</p>
             </div>
           </header>
-        <video autoplay muted loop controls>
-          <source src="./Home Page/welcome.mp4"  type="video/mp4"/>
-          <source src="./Home Page/welcome.webm" type="video/webm"/>
-          <source src="./Home Page/welcome.ogv"  type="video/ogg"/>
-          This browser does not support HTML5
+        <video autoplay muted loop>
+          <source src="./Home Page/welcome2.mp4"  type="video/mp4"/>
+          <source src="./Home Page/welcome2.webm" type="video/webm"/>
+          <source src="./Home Page/welcome2.ogv"  type="video/ogg"/>
+          This browser does not support HTML5.
         </video>
         </div>
       </div>
