--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
               <p>Designing Games</p>
             </div>
           </header>
-        <video autoplay muted loop>
-          <source src="./Home Page/welcome2.mp4"  type="video/mp4"/>
-          <source src="./Home Page/welcome2.webm" type="video/webm"/>
-          <source src="./Home Page/welcome2.ogv"  type="video/ogg"/>
-          This browser does not support HTML5.
-        </video>
+          <video autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
+            <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Home%20Page/welcome2.mp4" type="video/mp4">
+            This browser does not support HTML5.
+            </video>
         </div>
       </div>
       <header class="navi">
