--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Home%20Page/welcome2.mp4" type="video/mp4">
             This browser does not support HTML5.
             </video>
+            
         </div>
       </div>
       <header class="navi">
@@ -313,11 +314,10 @@
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic"
               >
-              <video width="100%" autoplay loop muted >
-                <source src="./Videos/Rendered Cinematic2.mp4" type="video/mp4" >
-                <source src="./Videos/Rendered Cinematic2.webm" type="video/webm" >
-                <source src="./Videos/Rendered Cinematic2.ogv" type="video/ogg" >
-              </video>
+              <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
+                <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/Rendered%20Cinematic2.mp4" type="video/mp4">
+                This browser does not support HTML5.
+                </video>
               </a>
             </div>
         </div>
