--- a/index.html
+++ b/index.html
@@ -303,14 +303,15 @@
                 class="lightbox-link"
                 data-title="Bouncing Ball"
               >
-              <video autoplay loop muted>
-                <source src="./Videos/bouncing ball project.mp4" type="video/mp4" />
-              </video>
+              <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
+                <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/bouncing%20bal%20lproject.mp4y" type="video/mp4">
+                This browser does not support HTML5.
+                </video>
               </a>
             </div>
             <div>
               <a
-                href="./Videos/Rendered Cinematic2.mp4"
+                href="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/Rendered%20Cinematic2.mp4"
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic"
               >
